SERVER-79552 [v7.0]: Fix $group for time-series rewrite to account for differences in _id fields