src/mongo/db/pipeline/document_source_group_base.h
@@ -130,6 +130,10 @@ public:
         return &_stats;
     }
 
+    const std::vector<std::string>& getIdFieldNames() const {
+        return _idFieldNames;
+    }
+
     bool canRunInParallelBeforeWriteStage(
         const OrderedPathSet& nameOfShardKeyFieldsUponEntryToStage) const final;
 
